# video_a

./: .dockerignore  .env  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  crop_encoder.cpp  crop_encoder.h  crop_writer.cpp  crop_writer.h  docker-compose.yml  logging.h  main.cpp  watch_manager.cpp  watch_manager.h
grpc_layer/: analytics_service_impl.cpp  analytics_service_impl.h  detection_queue.cpp  detection_queue.h
inference/: detection.h  face_detector.cpp  face_detector.h  frame_sampler.cpp  frame_sampler.h  inference_worker.cpp  inference_worker.h  pipeline.cpp  pipeline.h  plate_detector.cpp  plate_detector.h  plate_ocr.cpp  plate_ocr.h  primary_detector.cpp  primary_detector.h  tracker.cpp  tracker.h
interfaces/: av_deleters.h  media_packet.h  media_sink.h  reader.h  sink_container.h
proto/: analytics.proto
reader/: rtsp_reader.cpp  rtsp_reader.h
scripts/: build.sh
sink_container/: sink_container_impl.cpp  sink_container_impl.h
